force-app/main/default/objects/User/fields/AssignedBOS__c.field-meta.xml
<CustomField>
    <fullName>AssignedBOS__c</fullName>
    <description>Assigned back office specialist.</description>
    <inlineHelpText>Assigned back office specialist. If selected, then it will be automatically selected by default in new opportunities of this user.</inlineHelpText>
    <label>Assigned BO Specialist</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$User.Department</field>
            <operation>contains</operation>
            <value>Sales Support Department</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <relationshipName>SalesManagers</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>