force-app/main/default/objects/User/fields/BusinesDivision__c.field-meta.xml
<CustomField>
    <fullName>BusinesDivision__c</fullName>
    <label>Business Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BusinessDivisions</valueSetName>
    </valueSet>
</CustomField>