force-app/main/default/objects/User/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <formula>Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Email</label>
    <type>Text</type>
</CustomField>