force-app/main/default/objects/User/fields/extuserutils__UserContactEmailMatch__c.field-meta.xml
<CustomField>
    <fullName>extuserutils__UserContactEmailMatch__c</fullName>
    <description>Indicates whether the Contact email address matches the User email address for experience cloud users.</description>
    <formula>IF(NOT((ISBLANK(Email) &amp;&amp; ISBLANK(Contact.Email))), (LOWER(Email) ==  LOWER(Contact.Email)), false)</formula>
    <inlineHelpText>Indicates whether the Contact email address matches the User email address for experience cloud users.</inlineHelpText>
    <label>UserContactEmailMatch</label>
    <type>Checkbox</type>
</CustomField>