force-app/main/default/objects/User/fields/Full_Name_Rus__c.field-meta.xml
<CustomField>
    <fullName>Full_Name_Rus__c</fullName>
    <label>Full Name (Rus)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>