force-app/main/default/objects/User/fields/Full_Name_Ukr__c.field-meta.xml
<CustomField>
    <fullName>Full_Name_Ukr__c</fullName>
    <label>Full Name (Ukr)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>