force-app/main/default/objects/User/fields/LoginERP__c.field-meta.xml
<CustomField>
    <fullName>LoginERP__c</fullName>
    <description>User&apos;s login in the ERP system</description>
    <externalId>true</externalId>
    <label>Login in ERP</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>