force-app/main/default/objects/User/fields/Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Phone__c</fullName>
    <formula>MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile Phone</label>
    <type>Text</type>
</CustomField>