force-app/main/default/objects/User/fields/Power_BI_Report_Access_Tags__c.field-meta.xml
<CustomField>
    <fullName>Power_BI_Report_Access_Tags__c</fullName>
    <label>Power BI Report Access Tags</label>
    <type>TextArea</type>
</CustomField>