force-app/main/default/objects/User/fields/RG_sync_by_tag__c.field-meta.xml
<CustomField>
    <fullName>RG_sync_by_tag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Turn on/off email auto-linking by tag in Revenue Grid (Smartcloud Connect).</description>
    <inlineHelpText>Turn on/off email auto-linking by tag in Revenue Grid (Smartcloud Connect).</inlineHelpText>
    <label>Link emails by tag</label>
    <type>Checkbox</type>
</CustomField>