force-app/main/default/objects/User/fields/SalesDivision__c.field-meta.xml
<CustomField>
    <fullName>SalesDivision__c</fullName>
    <description>Sales division that user belongs to</description>
    <inlineHelpText>Sales division that user belongs to</inlineHelpText>
    <label>Market Segment</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>BusinesDivision__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>SalesDivisions</valueSetName>
    </valueSet>
</CustomField>