force-app/main/default/objects/User/fields/SalesRegion__c.field-meta.xml
<CustomField>
    <fullName>SalesRegion__c</fullName>
    <description>Default region of sales (used for sales managers)</description>
    <inlineHelpText>If selected, then this region will also be selected by default in new opportunities of this user.</inlineHelpText>
    <label>Sales Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Regions</valueSetName>
    </valueSet>
</CustomField>