force-app/main/default/objects/User/fields/Show_in_Activity_report__c.field-meta.xml
<CustomField>
    <fullName>Show_in_Activity_report__c</fullName>
    <formula>NOT( OR(
				CONTAINS(LOWER(FirstName) , &apos;test&apos;),
				CONTAINS(LOWER(LastName) , &apos;test&apos;),
				CONTAINS( Profile.Name , &apos;System Administrator&apos;),
				CONTAINS( Profile.Name , &apos;PT1&apos;),
				CONTAINS( Profile.Name , &apos;Customer Room Profile&apos;),
				CONTAINS( Profile.Name , &apos;Customer Community User (Custom)&apos;),
				CONTAINS( Profile.Name , &apos;Analytics Cloud Integration User&apos;),
				CONTAINS( Profile.Name , &apos;ERP Integration Service&apos;),
				CONTAINS( Profile.Name , &apos;Chatter&apos;),
				CONTAINS( Profile.Name , &apos;Analytics Cloud Security User&apos;)
							) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show in Activity report</label>
    <type>Checkbox</type>
</CustomField>