force-app/main/default/objects/User/fields/SyncWithERP__c.field-meta.xml
<CustomField>
    <fullName>SyncWithERP__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If true - user takes part in the SyncUsers</description>
    <inlineHelpText>If true - user takes part in the SyncUsers</inlineHelpText>
    <label>SyncWithERP</label>
    <type>Checkbox</type>
</CustomField>