force-app/main/default/objects/User/fields/UID_ERP__c.field-meta.xml
<CustomField>
    <fullName>UID_ERP__c</fullName>
    <label>ERP UID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>