force-app/main/default/objects/User/validationRules/Required_Employee_Number_and_Id_Erp.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Employee_Number_and_Id_Erp</fullName>
    <active>false</active>
    <description>Required Employee Number and Id Erp Besides customer user and external user</description>
    <errorConditionFormula>AND(AND(Profile.Name!=&apos;Customer Community User (Custom)&apos;,
						Profile.Name!=&apos;Chatter External User&apos;,
						Profile.Name!=&apos;Chatter Free User&apos;),
 OR(ISBLANK( ID_ERP__c ),
				ISBLANK(EmployeeNumber))  )</errorConditionFormula>
    <errorMessage>Employee Number and ID ERP  fields are required</errorMessage>
</ValidationRule>