force-app/main/default/objects/User/validationRules/Required_Manager_For_Customer_User.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Manager_For_Customer_User</fullName>
    <active>true</active>
    <description>Required Manager For Customer Community User</description>
    <errorConditionFormula>AND(Profile.Name=&apos;Customer Community User (Custom)&apos;,
ISBLANK( ManagerId ) )</errorConditionFormula>
    <errorDisplayField>ManagerId</errorDisplayField>
    <errorMessage>Customer Community User can not contain empty Manager field</errorMessage>
</ValidationRule>