force-app/main/default/objects/User/validationRules/Required_Sale_Division.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Sale_Division</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK( TEXT(SalesDivision__c) )</errorConditionFormula>
    <errorDisplayField>SalesDivision__c</errorDisplayField>
    <errorMessage>Required Field</errorMessage>
</ValidationRule>