force-app/main/default/objects/User/validationRules/Same_Employee_number_and_id_ERP.validationRule-meta.xml
<ValidationRule>
    <fullName>Same_Employee_number_and_id_ERP</fullName>
    <active>false</active>
    <errorConditionFormula>EmployeeNumber != ID_ERP__c</errorConditionFormula>
    <errorMessage>Employee Number must be same like id ERP</errorMessage>
</ValidationRule>