force-app/main/default/objects/User/listViews/Active_Licenses.listView-meta.xml
<ListView>
    <fullName>Active_Licenses</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.DEPARTMENT</columns>
    <columns>CORE.USERS.DIVISION</columns>
    <columns>SalesDivision__c</columns>
    <columns>ID_ERP__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.USERTYPE</field>
        <operation>equals</operation>
        <value>S</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Licenses</label>
    <sharedTo>
        <group>ADMIN</group>
    </sharedTo>
</ListView>