force-app/main/default/objects/User/listViews/ActiveSalesUsers.listView-meta.xml
<ListView>
    <fullName>ActiveSalesUsers</fullName>
    <columns>FULL_NAME</columns>
    <columns>ID_ERP__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.DEPARTMENT</columns>
    <columns>CORE.USERS.DIVISION</columns>
    <columns>LOCALE</columns>
    <columns>EMAIL_ENCODING</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>notContain</operation>
        <value>Customer</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>notContain</operation>
        <value>Chatter</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>notContain</operation>
        <value>ERP</value>
    </filters>
    <label>Active Sales Users</label>
    <sharedTo>
        <group>ADMIN</group>
    </sharedTo>
</ListView>