force-app/main/default/objects/User/listViews/AdminUsers.listView-meta.xml
<ListView>
    <fullName>AdminUsers</fullName>
    <booleanFilter>(1 OR 3 OR 4) AND 2</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>System Administrator</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>Scrap App Admin</value>
    </filters>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>startsWith</operation>
        <value>IT</value>
    </filters>
    <label>Admin Users</label>
    <sharedTo>
        <group>ADMIN</group>
    </sharedTo>
</ListView>