force-app/main/default/objects/User/listViews/AllUsers.listView-meta.xml
<ListView>
    <fullName>AllUsers</fullName>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>ID_ERP__c</columns>
    <columns>LoginERP__c</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.DEPARTMENT</columns>
    <columns>CORE.USERS.DIVISION</columns>
    <columns>SalesDivision__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATED_BY_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Users</label>
    <sharedTo>
        <group>ADMIN</group>
    </sharedTo>
</ListView>