force-app/main/default/objects/User/listViews/AllUsersShort.listView-meta.xml
<ListView>
    <fullName>AllUsersShort</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.DEPARTMENT</columns>
    <columns>CORE.USERS.DIVISION</columns>
    <columns>SalesDivision__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Users Short</label>
    <sharedTo>
        <group>ADMIN</group>
    </sharedTo>
</ListView>