force-app/main/default/objects/User/listViews/America_Division.listView-meta.xml
<ListView>
    <fullName>America_Division</fullName>
    <columns>FULL_NAME</columns>
    <columns>JobTitle__c</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>CREATED_DATE</columns>
    <columns>AssignedBOS__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SalesDivision__c</field>
        <operation>equals</operation>
        <value>00001</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>contains</operation>
        <value>Sale</value>
    </filters>
    <label>Division AMERICA</label>
    <sharedTo>
        <group>ADMIN</group>
        <role>System_Administrator</role>
    </sharedTo>
</ListView>