force-app/main/default/objects/User/listViews/Customer_Community_AMERICA.listView-meta.xml
<ListView>
    <fullName>Customer_Community_AMERICA</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.COMPANY_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>MANAGER</columns>
    <columns>AssignedBOS__c</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>contains</operation>
        <value>Customer Community User (Custom)</value>
    </filters>
    <filters>
        <field>FULL_NAME</field>
        <operation>notContain</operation>
        <value>test</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>SalesDivision__c</field>
        <operation>contains</operation>
        <value>America</value>
    </filters>
    <label>Customer Community AMERICA</label>
    <sharedTo>
        <group>ADMIN</group>
    </sharedTo>
</ListView>