force-app/main/default/objects/User/listViews/Customer_Community_CIS.listView-meta.xml
<ListView>
    <fullName>Customer_Community_CIS</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.COMPANY_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>Customer Community User (Custom)</value>
    </filters>
    <filters>
        <field>FULL_NAME</field>
        <operation>notContain</operation>
        <value>test</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>SalesDivision__c</field>
        <operation>equals</operation>
        <value>00010</value>
    </filters>
    <label>Customer Community CIS</label>
    <sharedTo>
        <group>ADMIN</group>
    </sharedTo>
</ListView>