force-app/main/default/objects/User/listViews/Customer_Community_EUROPE.listView-meta.xml
<ListView>
    <fullName>Customer_Community_EUROPE</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.COMPANY_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.COUNTRY_CODE</columns>
    <columns>MANAGER</columns>
    <columns>AssignedBOS__c</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CREATED_BY_NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>contains</operation>
        <value>Customer Community User (Custom)</value>
    </filters>
    <filters>
        <field>FULL_NAME</field>
        <operation>notContain</operation>
        <value>test</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>SalesDivision__c</field>
        <operation>contains</operation>
        <value>Europe</value>
    </filters>
    <label>Customer Community EUROPE</label>
    <sharedTo>
        <group>ADMIN</group>
    </sharedTo>
</ListView>