force-app/main/default/objects/User/listViews/Deactivated.listView-meta.xml
<ListView>
    <fullName>Deactivated</fullName>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>UPDATEDBY_USER.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>notContain</operation>
        <value>Chatter</value>
    </filters>
    <label>Deactivated</label>
    <sharedTo>
        <group>ADMIN</group>
    </sharedTo>
</ListView>